[gd_scene load_steps=22 format=3 uid="uid://qtcyjgtgopwv"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_bf40j"]
[ext_resource type="Texture2D" uid="uid://cq4ue11t77mhw" path="res://assets/sprites/environment/Grass.png" id="2_l81vt"]
[ext_resource type="Texture2D" uid="uid://bhry2banyyoqp" path="res://assets/sprites/environment/DirtPath.png" id="3_4p40e"]
[ext_resource type="PackedScene" uid="uid://c6yd50smba556" path="res://assets/game/picnic_basket/picnic_basket.tscn" id="4_vnvhu"]
[ext_resource type="PackedScene" uid="uid://b18d6154x2hk" path="res://assets/game/wave_spawner/wave_spawner.tscn" id="5_7ui3m"]
[ext_resource type="PackedScene" uid="uid://cgmfwrdnu35nr" path="res://assets/game/market/market.tscn" id="6_shtq4"]
[ext_resource type="Texture2D" uid="uid://cs0jnou8kbi0w" path="res://assets/sprites/ui/Buttons.png" id="7_b42sb"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dxkws"]
texture = ExtResource("2_l81vt")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
2:0/0 = 0
2:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:1/0 = 0
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_sos6o"]
tile_size = Vector2i(32, 32)
sources/1 = SubResource("TileSetAtlasSource_dxkws")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_njmge"]
texture = ExtResource("3_4p40e")
texture_region_size = Vector2i(32, 32)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)

[sub_resource type="TileSet" id="TileSet_x7v1t"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 4
sources/0 = SubResource("TileSetAtlasSource_njmge")

[sub_resource type="AtlasTexture" id="AtlasTexture_lagp1"]
atlas = ExtResource("7_b42sb")
region = Rect2(32, 16, 32, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qtw1i"]
texture = SubResource("AtlasTexture_lagp1")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vew2r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yrrfs"]
atlas = ExtResource("7_b42sb")
region = Rect2(0, 16, 32, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mrlgc"]
texture = SubResource("AtlasTexture_yrrfs")
modulate_color = Color(0.8, 0.8, 0.8, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_0o6pu"]
atlas = ExtResource("7_b42sb")
region = Rect2(0, 16, 32, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_emixs"]
texture = SubResource("AtlasTexture_0o6pu")

[sub_resource type="AtlasTexture" id="AtlasTexture_cu45i"]
atlas = ExtResource("7_b42sb")
region = Rect2(0, 16, 32, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e88a2"]
texture = SubResource("AtlasTexture_cu45i")
modulate_color = Color(0.666667, 0.666667, 0.666667, 1)

[sub_resource type="Theme" id="Theme_i136g"]
Button/styles/disabled = SubResource("StyleBoxTexture_qtw1i")
Button/styles/focus = SubResource("StyleBoxEmpty_vew2r")
Button/styles/hover = SubResource("StyleBoxTexture_mrlgc")
Button/styles/normal = SubResource("StyleBoxTexture_emixs")
Button/styles/pressed = SubResource("StyleBoxTexture_e88a2")

[node name="Level" type="Node2D"]
script = ExtResource("1_bf40j")

[node name="TileMap" type="Node2D" parent="."]
scale = Vector2(3.75, 3.75)

[node name="Ground" type="TileMapLayer" parent="TileMap"]
texture_filter = 1
tile_set = SubResource("TileSet_sos6o")

[node name="Path" type="TileMapLayer" parent="TileMap"]
texture_filter = 1
tile_set = SubResource("TileSet_x7v1t")

[node name="PicnicBasket" parent="." instance=ExtResource("4_vnvhu")]
position = Vector2(180, 180)

[node name="WaveSpawner" parent="." instance=ExtResource("5_7ui3m")]
position = Vector2(-8, 960)

[node name="SpawnPoint1" type="Node2D" parent="WaveSpawner"]
position = Vector2(-37, -60)

[node name="Market" parent="." instance=ExtResource("6_shtq4")]
initial_money = 48

[node name="StartWave" type="Button" parent="."]
texture_filter = 1
offset_left = 1683.0
offset_top = 975.0
offset_right = 1893.0
offset_bottom = 1065.0
theme = SubResource("Theme_i136g")
theme_override_font_sizes/font_size = 28
text = "START WAVE"

[connection signal="pressed" from="StartWave" to="." method="_on_start_wave_pressed"]
